# questdb-utility-analytics

./: .gitignore  Makefile  README.md  ingestion-config.example.toml  pyproject.toml
.github/workflows/: ci.yml
infra/: docker-compose.tls-proxy.yml  docker-compose.yml
infra/caddy/: Caddyfile
ingestion-service/: Cargo.toml
ingestion-service/src/: config.rs  lib.rs  main.rs  metrics_server.rs  observability.rs
ingestion-service/src/pipeline/: mod.rs
ingestion-service/src/sinks/: mod.rs  questdb.rs  questdb_generation.rs  questdb_ilp.rs
ingestion-service/src/sources/: http_generation_output.rs  http_json.rs  meter_usage_backfill_file.rs  meter_usage_csv_file.rs  meter_usage_dat_file.rs  mod.rs
ingestion-service/src/transform/: mod.rs
rust-client/: Cargo.toml
rust-client/src/db/: meter_usage_queries.rs  mod.rs
rust-client/src/domain/: generation_output.rs  meter_usage.rs  mod.rs
scripts/: post_ndjson_examples.sh  produce_ndjson.py
sql/schema/: 01_core_timeseries.sql  02_reference_tables.sql  03_mapping_tables.sql
src/utility_ts_analytics/: __init__.py
src/utility_ts_analytics/ingest/: __init__.py  bulk_loader.py
src/utility_ts_analytics/queries/: __init__.py  meter_usage_queries.py
tests/: test_bulk_loader.py  test_meter_usage_queries.py  test_sanity.py
