[package]
name = "ingestion-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "time", "macros", "postgres"] }
rust-client = { path = "../rust-client" }
async-trait = "0.1"
futures = "0.3"
axum = { version = "0.7", features = ["macros", "json"] }
async-stream = "0.3"
csv = "1.3"
tokio-stream = "0.1"
# Time handling (timestamps)
time = { version = "0.3", features = ["macros", "serde"] }
# Metrics instrumentation
metrics = "0.23"
metrics-exporter-prometheus = "0.13"
once_cell = "1.19"
# For config loading (TOML)
toml = "0.8"

[features]
default = []
