[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "time", "derive"] }
Tokio = { package = "tokio", version = "1.40", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3", features = ["macros", "serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
